--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Homepage for studion01 Events provider and services.",
   "main": "src/index.html",
   "scripts": {
-    "start": "npx live-server",
+    "start": "npx live-server src/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
